fluid layout fix sidebar light to match design: - increase sidebar logo size - increase mdk drawer width - fix drawer elements spacing

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,5 +1,7 @@
 @import 'variables-colors';
 
+$mdk-drawer-width: 300px !default;
+
 $line-height-base:  1.2 !default;
 
 $table-head-bg: $body-bg;
