--- a/src/sass/drawer/_drawer--dark.scss
+++ b/src/sass/drawer/_drawer--dark.scss
@@ -10,7 +10,6 @@ $active-border-width: .25rem;
   .drawer-heading { color: #ffffff; }
 
   .drawer-menu {
-    padding: 0 .625rem;
     > .drawer-menu-item {
       .drawer-menu-text {
         text-transform: uppercase;
