--- a/src/sass/drawer/_drawer--light.scss
+++ b/src/sass/drawer/_drawer--light.scss
@@ -16,7 +16,6 @@ $active-border-width: .25rem;
   .drawer-heading { color: theme-color('text-color'); }
 
   .drawer-menu {
-    padding: 0 .625rem;
     > .drawer-menu-item {
       .drawer-menu-text {
         text-transform: uppercase;
